--- a/docs/legal/index.mdx
+++ b/docs/legal/index.mdx
@@ -93,9 +93,9 @@ Gigapipe guarantees one hundred percent (“100%”) access to the online client
 5. Redundant Infrastructure
 Gigapipe guarantees one hundred percent (“100%”) uptime on the power and HVAC services to Customers located in Data Center, subject to the provisions of this SLA. All computer equipment and related services are served by redundant UPS power units with backup onsite diesel generators. Except for service downtimes resulting from Customer’s fault, and provided Customer follows the proper procedures for service credit claims as set forth in this SLA, for each continuous, uninterrupted thirty (“30”) minute interval of power and HVAC service downtime that Customer experiences during an applicable month, Gigapipe agrees to grant to Customer a SLA Credit equal to five percent (“5%”) of the Customer’s monthly service fees for that month. Power and HVAC service downtimes of less than thirty (“30”) continuous, uninterrupted minutes do not qualify for this service credit, and the  Customer cannot combine or augment power and HVAC or other service-related downtimes to satisfy such downtime requirement.
 
-For third party integrations created by QXIP, please find below the user agreement with QXIP BV:
+### For third party integrations created by QXIP, please find below the user agreement with QXIP BV:
 
-HEPIC CLOUD SERVICES AGREEMENT
+## HEPIC CLOUD SERVICES AGREEMENT
 
 
 This HEPIC Cloud Services Agreement (this “Agreement”) is between QXIP BV. (“QXIP” “we,” “us,” or “our”) and (“You”). This Agreement sets forth the terms and conditions that govern orders placed under this Agreement and under which QXIP enables its customer to access and use our cloud technology solutions and the associated services made available by QXIP. 
