--- a/docs/legal/index.mdx
+++ b/docs/legal/index.mdx
@@ -28,7 +28,7 @@ Customer agrees to the following Terms of Service, (“TOS”):
 
 9. Service Level Agreement Credit(s), “SLA Credit(s)”: SLA Credits are governed by these TOS and the SLA Agreement, below. SLA Credits are a service credit that, when applicable, and following an SLA Credit claim, will be issued to your Customer account and may be used to offset future billable services. SLA Credits shall not be issued as cash back to the Customer nor shall the SLA Credits be transferable to other account holders. SLA Credits shall expire when Customer’s account is fully terminated.
 
-10. Cancellation: Because cancellation is automated, Gigapipe requires a written cancellation notice via the Client Area, a minimum of twenty-four (“24”) hours prior to 00:00:01 PST (GMT-8) on the Anniversary Billing Date for discontinuance or downgrades of month-to-month services, unless specified otherwise. Failure to supply the requisite twenty-four (“24”) hours written notice of cancellation will result in a full billable cycle, on all service packages, prior to cancellation. Any server cancellation prior to the minimum deadline will remain online until the automated process reclaims your server on the Anniversary Billing Date. Notice of written cancellation is required through the online Client Area located at https://www.app.<domain>.gigapipe.com/. All Customer data remaining after the cancellation date will be destroyed for security and privacy reasons, unless otherwise required by law.
+10. Cancellation: Because cancellation is automated, Gigapipe requires a written cancellation notice via the Client Area, a minimum of twenty-four (“24”) hours prior to 00:00:01 PST (GMT-8) on the Anniversary Billing Date for discontinuance or downgrades of month-to-month services, unless specified otherwise. Failure to supply the requisite twenty-four (“24”) hours written notice of cancellation will result in a full billable cycle, on all service packages, prior to cancellation. Any server cancellation prior to the minimum deadline will remain online until the automated process reclaims your server on the Anniversary Billing Date. Notice of written cancellation is required through the online Client Area located at https://www.app.[yourdomain].gigapipe.io/. All Customer data remaining after the cancellation date will be destroyed for security and privacy reasons, unless otherwise required by law.
 
 11. 14 Day Refund Window: Subject to the requirements of Cancelation in these Terms of Service, Gigapipe offers Customers who have purchased a VPS/Cloud Hosting Services package a fourteen (14) day refund window from their date of purchase in which they can cancel their VPS/Cloud Hosting Services package for any reason, at no cost.
 
@@ -36,7 +36,7 @@ Customer agrees to the following Terms of Service, (“TOS”):
 
 13. Credits and Discounts Reversals: Should the Customer purchase products and/or services with their Gigapipe Credit and later, following the 14 Day Refund Window, wish to cancel those services, any Gigapipe Credit utilized in that purchase shall not be eligible for reuse. Further, if Gigapipe Credits or any other package discount was offered as an incentive for the entering into of a service agreement, and the associated agreement is canceled by the Customer prior to the end of the billing cycle, any Gigapipe Credits will be removed from that Customer’s account and the discounts applied to that agreement will be reversed or recalculated accordingly.
 
-14. Refunds & Disputes: All other services rendered by Gigapipe are non-refundable. This includes, but is not limited to: setup fees, one time fees, monthly service fees, upgrade fees, additional service fees, administrative fees, and late fees. Customers seeking to resolve billing errors are instructed to open an accounting ticket inside the Client Area located at https://www.app.<domain>.gigapipe.com/. Customer agrees not to chargeback any credit card payments for services rendered. A chargeback of payment for services rendered will result in an additional charge of up to one hundred fifty dollars (“$150”) and will be subject to collection by an authorized collection agency. Customer is responsible for any fees and costs (including, but not limited to, reasonable attorneys’ fees, court costs and collection agency fees) incurred by Gigapipe in enforcing collection.
+14. Refunds & Disputes: All other services rendered by Gigapipe are non-refundable. This includes, but is not limited to: setup fees, one time fees, monthly service fees, upgrade fees, additional service fees, administrative fees, and late fees. Customers seeking to resolve billing errors are instructed to open an accounting ticket inside the Client Area located at https://www.app.[yourdomain].gigapipe.io/. Customer agrees not to chargeback any credit card payments for services rendered. A chargeback of payment for services rendered will result in an additional charge of up to one hundred fifty dollars (“$150”) and will be subject to collection by an authorized collection agency. Customer is responsible for any fees and costs (including, but not limited to, reasonable attorneys’ fees, court costs and collection agency fees) incurred by Gigapipe in enforcing collection.
 
 15. Non-Payment: All payments are due in full on the Anniversary Billing Date. Failure to remit payment for services on the Anniversary Billing Date is a violation of the TOS. Failure to remit payment for five (“5”) consecutive days, including the Anniversary Billing Date, shall result in a termination of public access to Customer services. Customer will, however, be permitted access to data and services through the service network. Failure to remit payment for services within seven (“7”) consecutive days, including the Anniversary Billing Date, shall result in termination of access to the service network and all services shall be reclaimed. A late fee of twenty dollars (“$20”) will be incurred for failure to remit payment for services on or before the monthly Anniversary Billing Date. All Customer data remaining after seven (“7”) days of nonpayment will be destroyed for security and privacy reasons, unless otherwise required by law.
 
@@ -79,7 +79,7 @@ Customer agrees to the following Terms of Service, (“TOS”):
 The Service Level Agreement, “SLA” is incorporated into the TOS and applicable to all services delivered directly to Customers of Gigapipe. The SLA is not applicable to unrelated third parties or third parties lacking privity of contract with Gigapipe. The uptime guarantees and the resulting SLA Credit(s) are applied in monthly terms unless specified otherwise. To ensure that Gigapipe is providing optimal services to its Customers, Gigapipe is required to perform scheduled maintenance, from time to time, on the network, client area, and hardware. Any downtime resulting from any such scheduled maintenance or any event of Force Majeure does not qualify for SLA Credit(s). All SLA guarantees and information listed below are made in good faith and are subject to standard contract remedies. Note: SLA Credits for Hourly Services will be calculated and applied based on the same monthly calculation used for the month-to-month contracts.
 
 1. SLA Credit Claim
-To properly claim an SLA Credit due, the Customer’s master administrative user must open an SLA ticket with the Billing Department located inside the Client Area at https://www.app.<domain>.gigapipe.com/ within seven (“7”) days of the purported outage. Customer must include service type, IP Address, contact information, and full description of the service interruption including logs, if applicable. The SLA claim will be researched by the appropriate Gigapipe department manager and any credit issued will be issued to accounting and the ticket will be updated. SLA Credits are issued as service credits on future billing cycles. SLA Credits shall not be bartered or traded with other Gigapipe customers. Please allow up to fourteen (“14”) days for the process of SLA claims. Customer acknowledges that the maximum amount of SLA Credit that may be used for any particular month cannot exceed the total monthly service fee amount for such month.
+To properly claim an SLA Credit due, the Customer’s master administrative user must open an SLA ticket with the Billing Department located inside the Client Area at https://www.app.[yourdomain].gigapipe.io/ within seven (“7”) days of the purported outage. Customer must include service type, IP Address, contact information, and full description of the service interruption including logs, if applicable. The SLA claim will be researched by the appropriate Gigapipe department manager and any credit issued will be issued to accounting and the ticket will be updated. SLA Credits are issued as service credits on future billing cycles. SLA Credits shall not be bartered or traded with other Gigapipe customers. Please allow up to fourteen (“14”) days for the process of SLA claims. Customer acknowledges that the maximum amount of SLA Credit that may be used for any particular month cannot exceed the total monthly service fee amount for such month.
 
 2. SLA Claim Fault
 Customers currently in arrears for monthly services do not qualify for SLA claims. Customers who have been in payment arrears three (“3”) or more times in the previous twelve (“12”) months do not qualify for SLA claims. Valid SLA claims will not be credited to the Customer’s accounts until all abuse issues are resolved. Any Customer making false or repetitive claims will incur a one-time charge of fifty dollars (“$50”) per incident for such claims. False or repetitive claims are also a violation of the TOS and may be subject to service suspension. Customers participating in malicious or aggressive Internet activities, thereby causing attacks or counter-attacks, do not qualify for SLA claims and shall be deemed in violation of the AUP.
