--- a/docs/legal/index.mdx
+++ b/docs/legal/index.mdx
@@ -10,15 +10,15 @@ Note: Gigapipe reserves the right to supplement and/or amend, at any time, the t
 
 Customer agrees to the following Terms of Service, (“TOS”):
 
-1. VPS/Cloud Hosting Services: During the term of this TOS, Gigapipe will provide certain virtual private server and cloud hosting services (the “VPS/Cloud Hosting Services”) to Customer as ordered by Customer and agreed to by the parties as part of the online Customer order process at https://www.gigapipe.com.
+1. Cloud Observability Services: During the term of this TOS, Gigapipe will provide certain virtual private server and cloud hosted services (the “Observability Services”) to Customer as ordered by Customer and agreed to by the parties as part of the online Customer order process at https://www.gigapipe.com.
 
-2. Consulting Services: Customer may engage Gigapipe to perform, and Gigapipe may agree to perform, certain consulting or other services on a monthly basis (“Consulting Services”) as agreed to by the parties in a statement of work (“SOW”) signed by both parties which shall be subject to the applicable terms and conditions of this TOS. As consideration for Consulting Services provided by Gigapipe, Customer will pay Gigapipe in the form and amount of payment and on the terms specified in the SOW.
+2. Consulting Services: Customer may engage Gigapipe to perform, and Gigapipe may agree to perform, certain consulting or other services on a monthly or project basis (“Consulting Services”) as agreed to by the parties in a statement of work (“SOW”) signed by both parties which shall be subject to the applicable terms and conditions of this TOS. As consideration for Consulting Services provided by Gigapipe, Customer will pay Gigapipe in the form and amount of payment and on the terms specified in the SOW.
 
-3. Term and Termination: The initial term of this TOS shall be monthly, semi-annually, annually or for such other period of time ordered by Customer and agreed to by the parties as part of the online Customer sign-up process at https://www.gigapipe.com (the “Initial Term”). This TOS shall automatically renew for additional periods of time equal to the Initial Term in perpetuity subject to written cancellation by (a) Customer in accordance with this TOS and (b) Gigapipe upon providing Customer with notice of non-renewal at least ten (10) days prior to the expiration of the Initial Term or any renewal term. Please carefully review Gigapipe’s cancellation policy set forth in Paragraph 10 below. Gigapipe may terminate this TOS and any related services (1) immediately (a) upon nonpayment as set forth in paragraph 12 below, (b) if Customer violates paragraph 16 (Permitted Use) of the TOS, or (c) if Customer violates any terms and conditions of the AUP or (2) upon any other breach of this TOS that is not cured upon Customer receiving written notice.
+3. Term and Termination: The initial term of this TOS shall be monthly, semi-annually, annually or for such other period of time ordered by Customer and agreed to by the parties as part of the Customer sign-up process at https://www.gigapipe.com (the “Initial Term”). This TOS shall automatically renew for additional periods of time equal to the Initial Term in perpetuity subject to written cancellation by (a) Customer in accordance with this TOS and (b) Gigapipe upon providing Customer with notice of non-renewal at least ten (10) days prior to the expiration of the Initial Term or any renewal term. Please carefully review Gigapipe’s cancellation policy set forth in Paragraph 10 below. Gigapipe may terminate this TOS and any related services (1) immediately (a) upon nonpayment as set forth in paragraph 12 below, (b) if Customer violates paragraph 16 (Permitted Use) of the TOS, or (c) if Customer violates any terms and conditions of the AUP or (2) upon any other breach of this TOS that is not cured upon Customer receiving written notice.
 
-4. VPS/Cloud Hosting Service Fees: Fees for VPS/Cloud Hosting Services ordered by the Customer shall begin on the date of the initial order and that date shall serve as the applicable monthly, semi-annual, annual or other anniversary date based on the billing cycle ordered by Customer (“Anniversary Billing Date”) for all future billings including upgrades, additional services, cancellations and SLA Credits, as defined below. Fees are due in advance of the monthly, semi-annual, annual or other applicable service and billing cycle and will be billed on each Anniversary Billing Date.
+4. Observability Service Fees: Fees for Gigapipe's services ordered by the Customer shall begin on the date of the initial order and that date shall serve as the applicable monthly, semi-annual, annual or other anniversary date based on the billing cycle ordered by Customer (“Anniversary Billing Date”) for all future billings including upgrades, additional services, cancellations and SLA Credits, as defined below. Fees are due in advance of the monthly, semi-annual, annual or other applicable service and billing cycle and will be billed on each Anniversary Billing Date.
 
-5. Upgrade Fees: Upgrades to the VPS/Cloud Hosting Services ordered on the Anniversary Billing Date will be billed for a full month, six (6) months, or year based on the service and billing cycle ordered by Customer and will continue on the Anniversary Billing Date. Upgrades ordered after the normal Anniversary Billing Date will be pro-rated to the next Anniversary Billing Date and billed as a one time pro-rata charge.
+5. Upgrade Fees: Upgrades or additional packages ordered on the Anniversary Billing Date will be billed for a full month, six (6) months, or year based on the service and billing cycle ordered by Customer and will continue on the Anniversary Billing Date. Upgrades ordered after the normal Anniversary Billing Date will be pro-rated to the next Anniversary Billing Date and billed as a one time pro-rata charge.
 
 6. Hourly Service Fees: For any services agreed to by the parties in writing and provided by Gigapipe on an hourly basis (“Hourly Services”), Customer shall specify the period of time for which the Hourly Services are requested, or cancel at any time. The minimum period of time for which Hourly Services may be requested is one (“1”) hour and Customer will be billed in full hourly increments, and no breakdown by minutes shall be permitted. Unless otherwise specifically stated in the TOS, Customers who request Hourly Services agree to all terms and conditions in Gigapipe’s TOS, including but not limited to these TOS and the AUP. Customers will be billed for Hourly Services and receive any SLA Credits, if applicable, on the Anniversary Billing Date (as set forth and defined in paragraph 4 above).
 
@@ -28,15 +28,15 @@ Customer agrees to the following Terms of Service, (“TOS”):
 
 9. Service Level Agreement Credit(s), “SLA Credit(s)”: SLA Credits are governed by these TOS and the SLA Agreement, below. SLA Credits are a service credit that, when applicable, and following an SLA Credit claim, will be issued to your Customer account and may be used to offset future billable services. SLA Credits shall not be issued as cash back to the Customer nor shall the SLA Credits be transferable to other account holders. SLA Credits shall expire when Customer’s account is fully terminated.
 
-10. Cancellation: Because cancellation is automated, Gigapipe requires a written cancellation notice via the Client Area, a minimum of twenty-four (“24”) hours prior to 00:00:01 PST (GMT-8) on the Anniversary Billing Date for discontinuance or downgrades of month-to-month services, unless specified otherwise. Failure to supply the requisite twenty-four (“24”) hours written notice of cancellation will result in a full billable cycle, on all service packages, prior to cancellation. Any server cancellation prior to the minimum deadline will remain online until the automated process reclaims your server on the Anniversary Billing Date. Notice of written cancellation is required through the online Client Area located at https://www.app.[yourdomain].gigapipe.io/. All Customer data remaining after the cancellation date will be destroyed for security and privacy reasons, unless otherwise required by law.
+10. Cancellation: In order to cancel or not renew, Gigapipe requires a written cancellation notice via email or ticket submit via the ticketing system, a minimum of ten (“10”) days prior to 00:00:01 PST (GMT-8) on the Anniversary Billing Date. Failure to supply the requisite ten (“10”) days written notice of cancellation will result in a full billable cycle, on all service packages, prior to cancellation. Any service cancellation prior to the minimum deadline will remain online until the subscription ends on the Anniversary Billing Date. Notice of written cancellation is required through the ticketing system or can be emailed to info@gigapipe.com with your Company name and from your account Admin. All Customer data remaining after the cancellation date will be destroyed for security and privacy reasons, unless otherwise required by law.
 
-11. 14 Day Refund Window: Subject to the requirements of Cancelation in these Terms of Service, Gigapipe offers Customers who have purchased a VPS/Cloud Hosting Services package a fourteen (14) day refund window from their date of purchase in which they can cancel their VPS/Cloud Hosting Services package for any reason, at no cost.
+11. 14 Day Refund Window: Subject to the requirements of Cancelation in these Terms of Service, Gigapipe offers Customers who have purchased a Services package a fourteen (14) day refund window from their date of purchase in which they can cancel their Services package for any reason, at no cost. This is the trial period.
 
-12. Gigapipe Credit(s): The Gigapipe Credit is a site credit that applies to Gigapipe’s VPS/Cloud Hosting Services package. Following the 14-day refund window, should a Customer desire to cancel a portion of their plan, and provided that the Customer has given a valid cancelation notice and provided that cancelation is not due a violation of paragraph 19 (Permitted Use) of the TOS, a violation any terms and conditions of the Acceptable Use Policy, “AUP” or any other breach of this TOS; the Customer may be eligible for an Gigapipe Credit. The Gigapipe Credit shall not be issued as cash back to the Customer nor shall the Gigapipe Credit be transferable to other account holders. These credits shall be maintained in the Customer’s account and be used solely for the purchase of eligible products and/or services. Once used, the Gigapipe Credit(s) are extinguished and are not eligible for further application. Gigapipe Credits shall expire when Customer’s account is fully terminated.
+12. Gigapipe Credit(s): The Gigapipe Credit is a site credit that applies to Gigapipe’s Observability Services package. Following the 14-day refund window, should a Customer desire to cancel a portion of their plan, and provided that the Customer has given a valid cancelation notice and provided that cancelation is not due a violation of paragraph 19 (Permitted Use) of the TOS, a violation any terms and conditions of the Acceptable Use Policy, “AUP” or any other breach of this TOS; the Customer may be eligible for a Gigapipe Credit. The Gigapipe Credit shall not be issued as cash back to the Customer nor shall the Gigapipe Credit be transferable to other account holders. These credits shall be maintained in the Customer’s account and be used solely for the purchase of eligible products and/or services. Once used, the Gigapipe Credit(s) are extinguished and are not eligible for further application. Gigapipe Credits shall expire when Customer’s account is fully terminated.
 
 13. Credits and Discounts Reversals: Should the Customer purchase products and/or services with their Gigapipe Credit and later, following the 14 Day Refund Window, wish to cancel those services, any Gigapipe Credit utilized in that purchase shall not be eligible for reuse. Further, if Gigapipe Credits or any other package discount was offered as an incentive for the entering into of a service agreement, and the associated agreement is canceled by the Customer prior to the end of the billing cycle, any Gigapipe Credits will be removed from that Customer’s account and the discounts applied to that agreement will be reversed or recalculated accordingly.
 
-14. Refunds & Disputes: All other services rendered by Gigapipe are non-refundable. This includes, but is not limited to: setup fees, one time fees, monthly service fees, upgrade fees, additional service fees, administrative fees, and late fees. Customers seeking to resolve billing errors are instructed to open an accounting ticket inside the Client Area located at https://www.app.[yourdomain].gigapipe.io/. Customer agrees not to chargeback any credit card payments for services rendered. A chargeback of payment for services rendered will result in an additional charge of up to one hundred fifty dollars (“$150”) and will be subject to collection by an authorized collection agency. Customer is responsible for any fees and costs (including, but not limited to, reasonable attorneys’ fees, court costs and collection agency fees) incurred by Gigapipe in enforcing collection.
+14. Refunds & Disputes: All other services rendered by Gigapipe are non-refundable. This includes, but is not limited to: setup fees, one time fees, monthly service fees, upgrade fees, additional service fees, administrative fees, and late fees. Customers seeking to resolve billing errors are instructed to open an accounting ticket via the ticketing system. Customer agrees not to chargeback any credit card payments for services rendered. A chargeback of payment for services rendered will result in an additional charge of up to one hundred fifty dollars (“$150”) and will be subject to collection by an authorized collection agency. Customer is responsible for any fees and costs (including, but not limited to, reasonable attorneys’ fees, court costs and collection agency fees) incurred by Gigapipe in enforcing collection.
 
 15. Non-Payment: All payments are due in full on the Anniversary Billing Date. Failure to remit payment for services on the Anniversary Billing Date is a violation of the TOS. Failure to remit payment for five (“5”) consecutive days, including the Anniversary Billing Date, shall result in a termination of public access to Customer services. Customer will, however, be permitted access to data and services through the service network. Failure to remit payment for services within seven (“7”) consecutive days, including the Anniversary Billing Date, shall result in termination of access to the service network and all services shall be reclaimed. A late fee of twenty dollars (“$20”) will be incurred for failure to remit payment for services on or before the monthly Anniversary Billing Date. All Customer data remaining after seven (“7”) days of nonpayment will be destroyed for security and privacy reasons, unless otherwise required by law.
 
@@ -46,7 +46,7 @@ Customer agrees to the following Terms of Service, (“TOS”):
 
 18. Identity Use: Customer agrees to use the Gigapipe logo, Gigapipe information, and/or related services in accordance with Gigapipe’s approved marketing guidelines. Gigapipe agrees not to use Customer logos without prior written consent of Customer.
 
-19. Permitted Use: By accepting the TOS, Customer agrees to use Gigapipes’ services solely for their intended purposes. If Gigapipe determines in its sole discretion that Customer is misusing the VPS/Cloud Hosting Services, Gigapipe reserves the right to cap the data processing and usage capacity available to Customer. CUSTOMER SPECIFICALLY AGREES NOT TO TAMPER WITH, MAKE DERIVATIVE WORKS OF, REVERSE COMPILE, REVERSE ENGINEER AND/OR DISASSEMBLE ANY OF Gigapipe’S SOFTWARE OR FILES. If Customer violates or exceeds the Permitted Use, Gigapipe reserves the right to immediately terminate Customer’s account and will pursue any and all legal remedies available.
+19. Permitted Use: By accepting the TOS, Customer agrees to use Gigapipes’ services solely for their intended purposes. If Gigapipe determines in its sole discretion that Customer is misusing its Services, Gigapipe reserves the right to cap the data processing and usage capacity available to Customer. CUSTOMER SPECIFICALLY AGREES NOT TO TAMPER WITH, MAKE DERIVATIVE WORKS OF, REVERSE COMPILE, REVERSE ENGINEER AND/OR DISASSEMBLE ANY OF Gigapipe’S SOFTWARE OR FILES. If Customer violates or exceeds the Permitted Use, Gigapipe reserves the right to immediately terminate Customer’s account and will pursue any and all legal remedies available.
 
 20. LAWS: CUSTOMER AGREES TO ABIDE BY ALL LOCAL, STATE, AND FEDERAL LAWS PURSUANT TO SERVICES DELIVERED IN THE NETHERLANDS. THIS AGREEMENT IS MADE UNDER AND WILL BE CONSTRUED IN ACCORDANCE WITH THE LAWS OF THE NETHERLANDS, WITHOUT REGARD TO CONFLICT OF LAW PRINCIPLES.
 
@@ -79,19 +79,16 @@ Customer agrees to the following Terms of Service, (“TOS”):
 The Service Level Agreement, “SLA” is incorporated into the TOS and applicable to all services delivered directly to Customers of Gigapipe. The SLA is not applicable to unrelated third parties or third parties lacking privity of contract with Gigapipe. The uptime guarantees and the resulting SLA Credit(s) are applied in monthly terms unless specified otherwise. To ensure that Gigapipe is providing optimal services to its Customers, Gigapipe is required to perform scheduled maintenance, from time to time, on the network, client area, and hardware. Any downtime resulting from any such scheduled maintenance or any event of Force Majeure does not qualify for SLA Credit(s). All SLA guarantees and information listed below are made in good faith and are subject to standard contract remedies. Note: SLA Credits for Hourly Services will be calculated and applied based on the same monthly calculation used for the month-to-month contracts.
 
 1. SLA Credit Claim
-To properly claim an SLA Credit due, the Customer’s master administrative user must open an SLA ticket with the Billing Department located inside the Client Area at https://www.app.[yourdomain].gigapipe.io/ within seven (“7”) days of the purported outage. Customer must include service type, IP Address, contact information, and full description of the service interruption including logs, if applicable. The SLA claim will be researched by the appropriate Gigapipe department manager and any credit issued will be issued to accounting and the ticket will be updated. SLA Credits are issued as service credits on future billing cycles. SLA Credits shall not be bartered or traded with other Gigapipe customers. Please allow up to fourteen (“14”) days for the process of SLA claims. Customer acknowledges that the maximum amount of SLA Credit that may be used for any particular month cannot exceed the total monthly service fee amount for such month.
+To properly claim an SLA Credit due, the Customer’s master administrative user must open an SLA ticket within the ticketing system within seven (“7”) days of the purported outage. Customer must include service type, IP Address, contact information, and full description of the service interruption including logs, if applicable. The SLA claim will be researched by the appropriate Gigapipe department manager and any credit issued will be issued to accounting and the ticket will be updated. SLA Credits are issued as service credits on future billing cycles. SLA Credits shall not be bartered or traded with other Gigapipe customers. Please allow up to fourteen (“14”) days for the process of SLA claims. Customer acknowledges that the maximum amount of SLA Credit that may be used for any particular month cannot exceed the total monthly service fee amount for such month.
 
 2. SLA Claim Fault
 Customers currently in arrears for monthly services do not qualify for SLA claims. Customers who have been in payment arrears three (“3”) or more times in the previous twelve (“12”) months do not qualify for SLA claims. Valid SLA claims will not be credited to the Customer’s accounts until all abuse issues are resolved. Any Customer making false or repetitive claims will incur a one-time charge of fifty dollars (“$50”) per incident for such claims. False or repetitive claims are also a violation of the TOS and may be subject to service suspension. Customers participating in malicious or aggressive Internet activities, thereby causing attacks or counter-attacks, do not qualify for SLA claims and shall be deemed in violation of the AUP.
 
 3. Public Network
-Gigapipe and Data Center guarantees one hundred percent (“100%”) uptime on all Public Network services to Customers located in Data Center, subject to the provisions of this SLA. Except for service downtimes resulting from Customer’s fault, and provided Customer follows the proper procedures for service credit claims as set forth in this SLA, for each continuous, uninterrupted thirty (“30”) minute interval of Public Network service downtime that Customer experiences during an applicable month, Gigapipe agrees to grant to Customer a SLA Credit equal to five percent (“5%”) of the Customer’s monthly service fees for that month. Public Network service downtimes of less than thirty (“30”) continuous, uninterrupted minutes do not qualify for this service credit, and the Customer cannot combine or augment Public Network or other service-related downtimes to satisfy such downtime requirement. All Public Network services include redundant carrier grade internet backbone connections.
+Gigapipe and hosting partners guarantees one hundred percent (“100%”) uptime on all Public Network services to Customers, subject to the provisions of this SLA. Except for service downtimes resulting from Customer’s fault, and provided Customer follows the proper procedures for service credit claims as set forth in this SLA, for each continuous, uninterrupted thirty (“30”) minute interval of Public Network service downtime that Customer experiences during an applicable month, Gigapipe agrees to grant to Customer a SLA Credit equal to five percent (“5%”) of the Customer’s monthly service fees for that month. Public Network service downtimes of less than thirty (“30”) continuous, uninterrupted minutes do not qualify for this service credit, and the Customer cannot combine or augment Public Network or other service-related downtimes to satisfy such downtime requirement. All Public Network services include redundant carrier grade internet backbone connections.
 
 4. Client Area
 Gigapipe guarantees one hundred percent (“100%”) access to the online client management area, subject to the provisions of this SLA. Except for service downtimes resulting from Customer’s fault, and provided Customer follows the proper procedures for service credit claims as set forth in this SLA, for each continuous, uninterrupted thirty (“30”) minute interval of online client management area service downtime that Customer experiences during an applicable month, Gigapipe agrees to grant to Customer a SLA Credit equal to five percent (“5%”) of the Customer’s monthly service fees for that month. Online client management area service downtimes of less than thirty (“30”) continuous, uninterrupted minutes do not qualify for this service credit, and the Customer cannot combine or augment online client management area or other service-related downtimes to satisfy such downtime requirement. Access to the client area is available via the Public Network. The client area is utilized to fully manage the on-demand IT environments located within the Gigapipe data centers. Client area access includes ticket access, account management and other related services.
-
-5. Redundant Infrastructure
-Gigapipe guarantees one hundred percent (“100%”) uptime on the power and HVAC services to Customers located in Data Center, subject to the provisions of this SLA. All computer equipment and related services are served by redundant UPS power units with backup onsite diesel generators. Except for service downtimes resulting from Customer’s fault, and provided Customer follows the proper procedures for service credit claims as set forth in this SLA, for each continuous, uninterrupted thirty (“30”) minute interval of power and HVAC service downtime that Customer experiences during an applicable month, Gigapipe agrees to grant to Customer a SLA Credit equal to five percent (“5%”) of the Customer’s monthly service fees for that month. Power and HVAC service downtimes of less than thirty (“30”) continuous, uninterrupted minutes do not qualify for this service credit, and the  Customer cannot combine or augment power and HVAC or other service-related downtimes to satisfy such downtime requirement.
 
 ### For third party integrations created by QXIP, please find below the user agreement with QXIP BV:
 
