--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -1,9 +1,8 @@
 ---
-sidebar: false
+sidebar: true
 outline: true
 navbar: true
 nextPage: false
-
 ---
 
 import { PackageManagerTabs } from 'rspress/theme';
