--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -1,3 +1,10 @@
+---
+sidebar: true
+outline: true
+navbar: true
+nextPage: false
+---
+
 import { PackageManagerTabs } from 'rspress/theme';
 import { Steps } from 'rspress/theme';
 import { Tab, Tabs } from 'rspress/theme';
@@ -13,13 +20,14 @@ Welcome to your _ready-to-use_ managed Observability stack - _just add data_ ☘
 <Steps>
       ### Step 1
 
-      Access your Gigapipe account and generate a `scoped token` to read/write data
-
+      #### Access your Gigapipe account and generate a `scoped token` to read/write data
+      <br/>
       <img src="https://i.imgur.com/zzmufhk.png" />
 
       ### Step 2
 
-      Configure your Observability Agent to send Logs, Metrics and Traces to Gigapipe
+      #### Configure your Observability Agent to send Logs, Metrics and Traces to Gigapipe
+
       <Tabs>
             <Tab label="Logs">
             ⭐ Use any Loki compatible Agent or Client<br/><br/>
@@ -63,8 +71,8 @@ Welcome to your _ready-to-use_ managed Observability stack - _just add data_ ☘
 
       ### Step 3
 
-      Access Grafana to _auto-connect_ your Datasources and start Exploring your data
-
+      #### Access Grafana to _auto-connect_ your Datasources and start Exploring your data
+      <br/>
       <img src="https://i.imgur.com/3ENjPX8.png" />
 
       <Tabs>
@@ -89,7 +97,10 @@ Welcome to your _ready-to-use_ managed Observability stack - _just add data_ ☘
 
       ### Step 4
 
-      Sky is the limit! Any tutorial or example from Grafana Cloud should work as-is in Gigapipe.
+      #### Sky is the limit! Any tutorial or example from Grafana Cloud should work as-is in Gigapipe.
+
+      <br/>
+
 
       <img src="https://user-images.githubusercontent.com/1423657/184538094-13c11500-24ef-4468-9f33-dc9d564238e3.gif" width="100%" />
 
