fix: docs links

--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -1,12 +1,6 @@
----
-sidebar: true
-outline: true
-navbar: true
-nextPage: false
----
 
-import { PackageManagerTabs } from 'rspress/theme';
-import { Steps } from 'rspress/theme';
+import { PackageManagerTabs } from '@theme';
+import { Steps } from '@theme';
 import { Tab, Tabs } from 'rspress/theme';
 import SmoothIframe from '../../src/components/SmoothIframe'
 
