--- a/docs/docs/ingestion.mdx
+++ b/docs/docs/ingestion.mdx
@@ -7,11 +7,11 @@ Gigapipe provides a polyglot and robust data ingestion API - supporting logs, me
 <Tabs>
     <Tab label="Logs">
         ### Protocols
-        🪵 **Loki**: Ready for integration with Grafana Loki-compatible sources
-        🪵 **OpenTelemetry Logs**: For cross-platform, standardized logging
-        🪵 **InfluxDB**: Supports log ingestion from InfluxDB sources
-        🪵 **Elastic**: For structured log ingestion compatible with Elastic Stack
-        🪵 **Syslog**: Standard protocol for Unix-based systems and network devices
+        🪵 **Loki**: Ready for integration with Grafana Loki-compatible sources<br/>
+        🪵 **OpenTelemetry Logs**: For cross-platform, standardized logging<br/>
+        🪵 **InfluxDB**: Supports log ingestion from InfluxDB sources<br/>
+        🪵 **Elastic**: For structured log ingestion compatible with Elastic Stack<br/>
+        🪵 **Syslog**: Standard protocol for Unix-based systems and network devices<br/>
 
         ### Supported Agents
         📦 [Grafana Alloy](https://grafana.com/docs/alloy/latest/)<br/>
@@ -22,16 +22,16 @@ Gigapipe provides a polyglot and robust data ingestion API - supporting logs, me
         📦 [Amazon CloudWatch Agent](https://aws.amazon.com/cloudwatch/)<br/>
 
         ### [APIs](/docs/api)
-        - **HTTP/REST API**: For sending logs via HTTP endpoints in JSON or other structured formats
+        - **HTTP/REST API**: For sending logs via HTTP endpoints in JSON or other structured formats<br/>
         - **Loki Push API**: For sending logs in Loki-compatible format
     </Tab>
 
     <Tab label="Metrics">
         ### Protocols
-        🌡️ **Prometheus Remote Write**: For direct metric ingestion from Prometheus
-        🌡️ **Graphite**: For integration with Graphite-compatible sources
-        🌡️ **OpenTelemetry Metrics**: Standardized metric collection across environments
-        🌡️ **InfluxDB Line Protocol**: Enables ingestion from InfluxDB-compatible sources
+        🌡️ **Prometheus Remote Write**: For direct metric ingestion from Prometheus<br/>
+        🌡️ **Graphite**: For integration with Graphite-compatible sources<br/>
+        🌡️ **OpenTelemetry Metrics**: Standardized metric collection across environments<br/>
+        🌡️ **InfluxDB Line Protocol**: Enables ingestion from InfluxDB-compatible sources<br/>
 
         ### Supported Agents
         📦 [Grafana Alloy](https://grafana.com/docs/alloy/latest/)<br/>
@@ -41,15 +41,15 @@ Gigapipe provides a polyglot and robust data ingestion API - supporting logs, me
         📦 [Amazon CloudWatch Agent](https://aws.amazon.com/cloudwatch/)<br/>
 
         ### [APIs](/docs/api)
-        - **Prometheus PushGateway**: Used for pushing ephemeral metrics to Gigapipe
-        - **HTTP/REST API**: For HTTP-based metric ingestion
-        - **Graphite API**: Allows metric ingestion in Graphite format
+        - **Prometheus PushGateway**: Used for pushing ephemeral metrics to Gigapipe<br/>
+        - **HTTP/REST API**: For HTTP-based metric ingestion<br/>
+        - **Graphite API**: Allows metric ingestion in Graphite format<br/>
     </Tab>
 
     <Tab label="Traces">
         ### Protocols
-        👣 **OpenTelemetry Traces**: Full support for cross-platform distributed tracing
-        👣 **Jaeger**: Popular open-source distributed tracing system for microservices
+        👣 **OpenTelemetry Traces**: Full support for cross-platform distributed tracing<br/>
+        👣 **Jaeger**: Popular open-source distributed tracing system for microservices<br/>
 
         ### Supported Agents
         📦 [OpenTelemetry Collector](https://opentelemetry.io/docs/collector/)<br/>
@@ -57,14 +57,14 @@ Gigapipe provides a polyglot and robust data ingestion API - supporting logs, me
         📦 [Jaeger Agent](https://www.jaegertracing.io/)<br/>
 
         ### [APIs](/docs/api)
-        - **Jaeger Thrift**: Supports trace ingestion in Jaeger's Thrift format
-        - **HTTP/REST API**: For flexible HTTP-based trace ingestion
+        - **Jaeger Thrift**: Supports trace ingestion in Jaeger's Thrift format<br/>
+        - **HTTP/REST API**: For flexible HTTP-based trace ingestion<br/>
     </Tab>
 
     <Tab label="Profiling">
         ### Protocols
-        🔍 **Pyroscope**: Full API support for Pyroscope SDK Clients
-        🔍 **OpenTelemetry Profiling**: Standardized profiling format to track application resource use
+        🔍 **Pyroscope**: Full API support for Pyroscope SDK Clients<br/>
+        🔍 **OpenTelemetry Profiling**: Standardized profiling format to track application resource use<br/>
 
         ### Supported Agents
         📦 [Grafana Agent](https://grafana.com/docs/agent/latest/)<br/>
@@ -72,6 +72,6 @@ Gigapipe provides a polyglot and robust data ingestion API - supporting logs, me
         📦 [Parca Agent](https://www.parca.dev/)<br/>
 
         ### [APIs](/docs/api)
-        - **HTTP/REST API**: For sending profiling data to Gigapipe
+        - **HTTP/REST API**: For sending profiling data to Gigapipe<br/>
     </Tab>
 </Tabs>
