--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -5,7 +5,7 @@ import { Tab, Tabs } from 'rspress/theme';
 import SmoothIframe from '../../src/components/SmoothIframe'
 
 
-# 🏁 Get Started with Gigapipe
+# 🏁 Get Started with Gigapipe Cloud
 
 Welcome to your _ready-to-use_ managed Observability stack - _just add data_ ☘️
 
