--- a/docs/docs/oss.mdx
+++ b/docs/docs/oss.mdx
@@ -5,7 +5,7 @@ import { Tab, Tabs } from 'rspress/theme';
 import SmoothIframe from '../../src/components/SmoothIframe'
 
 
-# 🏁 Get Started with Gigapipe OSS
+# 🏁 Get Started with Gigapipe Open-Source
 
 Welcome to your _ready-to-use_ managed Observability stack - _just add data_ ☘️
 
@@ -18,7 +18,7 @@ Welcome to your _ready-to-use_ managed Observability stack - _just add data_ ☘
 
       <Tabs>
             <Tab label="Docker">
-            Deploy `gigapipe` using Docker or Kubernetes
+            Deploy `gigapipe` using Docker
 
             ```
             ghcr.io/metrico/gigapipe:latest
@@ -28,8 +28,7 @@ Welcome to your _ready-to-use_ managed Observability stack - _just add data_ ☘
             
             </Tab>
             <Tab label="Docker Compose">
-            Deploy `gigapipe` using Docker or Kubernetes
-
+            Deploy `gigapipe` using Docker Compose
             ```
             gigapipe:
               image: ghcr.io/metrico/gigapipe:latest
