--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -15,11 +15,14 @@ import Footer from '../src/components/footer/Footer'
 
 <h1>Gigapipe Observability 🔮</h1>
 
-<h3> Gigapipe is a polyglot observability platform designed to unify logs, metrics, and traces under a single, lightspeed OLAP database. </h3>
+<h3> Gigapipe is a polyglot observability platform designed to unify logs, metrics, traces and profiles. </h3>
 
-Unlike traditional observability tools that silo data and require multiple components, Gigapipe's all-in-one approach allows correlation between different data types and formats, enhancing troubleshooting and insight generation for engineering teams, devops and business intelligence.
+Unlike traditional observability tools that silo data and require running multiple components _(LGTM, etc)_ Gigapipe's all-in-one approach reduces moving parts and allows fast correlation between different data types and formats, enhancing troubleshooting and insight generation for engineering teams, devops and business intelligence. _Your data, Your way._
 
 <a href="/about"><img src="/qryn_cloud.png" alt="qryn_cloud" /></a>
+
+Gigapipe is drop-in compatible with many observability vendor formats, agents and APIs, allowing Users to pick the technology they know and trust.
+
 </div>
 <div className="custom-footer">
 <Footer />
