--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -23,9 +23,9 @@ Our polyglot observability stack  designed around the Observability standards th
 
 #### ☝️ Why did we create Gigapipe? 
 
-> _We needed a powerful all-in-one Observability stack with fast OLAP queries - so we made [qryn](https://qryn.dev)_
+> _We created [qryn](https://qryn.dev)_ the OSS polyglot stack for our own OLAP needs. 
 
-Let's take things back to the _pre-cloud era_. Our product goals and principles are simple:
+With Gigapipe we are taking things back to the _pre-cloud era_. Our goals and principles are simple:
 
 ✔️ We don't like metered solutions. Our plans are unmetered.<br/>
 ✔️ We don't like dynamic pricing. Our service costs are fixed.<br/>
