--- a/docs/docs/config.mdx
+++ b/docs/docs/config.mdx
@@ -14,7 +14,7 @@ Make sure you have sufficient memory and disk resources allocated for your node 
 
 The following `ENV` parameters can be used to control **gigapipe** parameters and its backend settings
 
-!> All parameters are _optional_, except for the **CLICKHOUSE_SERVER** related settings
+> All parameters are _optional_, except for the **CLICKHOUSE_SERVER** related settings
 
 | ENV   	                |Default   	|Usage   	|
 |------------------------|---	    |---		|
