--- a/docs/docs/config.mdx
+++ b/docs/docs/config.mdx
@@ -2,7 +2,7 @@
 
 **gigapipe** has no configuration files by design - just `ENV` variables
 
-?> We're K8s and Docker container friendly 😉
+> Gigapipe OSS is K8s and Docker container friendly 😉
 
 ### Resources
 
