--- a/docs/docs/oss.mdx
+++ b/docs/docs/oss.mdx
@@ -99,8 +99,8 @@ Welcome to your _ready-to-use_ managed Observability stack - _just add data_ ☘
       ### Step 3
 
       #### Use Grafana to _auto-connect_ your Gigapipe OSS and start Exploring your data
+      Gigapipe is compatible with Grafana Loki, Prometheus, Tempo and Pyroscope datasources
       <br/>
-      <img src="https://i.imgur.com/3ENjPX8.png" />
 
       <Tabs>
             <Tab label="Logs">
@@ -115,8 +115,12 @@ Welcome to your _ready-to-use_ managed Observability stack - _just add data_ ☘
             ⭐ Explore Logs using the native Tempo Datasource<br/>
             <SmoothIframe src="https://demo.arcade.software/G43G6ja4CHJYpF9rc3V2?embed" height="550px" />
             </Tab>
+            <Tab label="Profiles">
+            ⭐ Explore Profiles using the native Pyroscope Datasource<br/>
+            <SmoothIframe src="https://github.com/metrico/qryn-docs/assets/1423657/3fe7167e-504a-42c0-bf51-bdb090ce0f6b" height="550px" />
+            </Tab>
             <Tab label="View">
-            ⭐ Explore Logs, Metrics and Traces using View<br/>
+            ⭐ No Grafana? Explore Logs, Metrics and Traces using Gigapipe View<br/>
             <img src="https://user-images.githubusercontent.com/1423657/200136242-f4133229-ee7c-45e0-8228-8734cf56140a.gif" width="100%" />
             </Tab>
       </Tabs>
