--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -19,13 +19,17 @@ import Footer from '../src/components/footer/Footer'
 
 Unlike traditional observability tools that silo data and require running multiple components _(LGTM, etc)_ Gigapipe's all-in-one approach reduces moving parts and allows fast correlation between different data types and formats, enhancing troubleshooting and insight generation for engineering teams, devops and business intelligence. _Your data, Your way._
 
+<br><br>
+
 <h3> Drop-in compatible with Opentelemetry, Loki, Prometheus, Tempo, Pyroscope and beyond </h3>
 
 Unlike traditional observability tools Gigapipe does not require custom software. We natively ingest Opentelemetry, Loki, Prometheus, Tempo, Pyroscope, Datadog, Influx, Elastic using thousands of compatible Agents you can choose from. Our query API emulates Loki, Prometheus, Tempo and Pyroscope. _If you used Grafana before, you can use Gigapipe._
 
 <a href="/about"><img src="/qryn_cloud.png" alt="qryn_cloud" /></a>
 
-<h2><a href="/pricing">Ready? Let's Get Polyglot</a></h2>
+<br>
+
+<center><h1><a href="/pricing">Ready? Let's Get Polyglot</a></h1></center>
 
 </div>
 <div className="custom-footer">
