--- a/docs/docs/ingestion.mdx
+++ b/docs/docs/ingestion.mdx
@@ -6,7 +6,7 @@ Gigapipe provides a polyglot and robust data ingestion API - supporting logs, me
 
 <Tabs>
     <Tab label="Logs">
-        Gigapipe supports Log ingestion from multiple sources
+        💡 Gigapipe supports Log ingestion from multiple sources
         #### Supported Protocols
         🪵 **Loki**: Ready for integration with Grafana Loki-compatible sources<br/>
         🪵 **OpenTelemetry Logs**: For cross-platform, standardized logging<br/>
@@ -28,7 +28,7 @@ Gigapipe provides a polyglot and robust data ingestion API - supporting logs, me
     </Tab>
 
     <Tab label="Metrics">
-        Gigapipe supports Metrics ingestion from multiple sources
+        💡 Gigapipe supports Metrics ingestion from multiple sources
         #### Supported Protocols
         🌡️ **Prometheus Remote Write**: For direct metric ingestion from Prometheus<br/>
         🌡️ **Graphite**: For integration with Graphite-compatible sources<br/>
@@ -49,7 +49,7 @@ Gigapipe provides a polyglot and robust data ingestion API - supporting logs, me
     </Tab>
 
     <Tab label="Traces">
-        Gigapipe supports Traces ingestion from multiple sources
+        💡 Gigapipe supports Traces ingestion from multiple sources
         #### Supported Protocols
         👣 **OpenTelemetry Traces**: Full support for cross-platform distributed tracing<br/>
         👣 **Jaeger**: Popular open-source distributed tracing system for microservices<br/>
@@ -65,7 +65,7 @@ Gigapipe provides a polyglot and robust data ingestion API - supporting logs, me
     </Tab>
 
     <Tab label="Profiling">
-        Gigapipe supports Continuous Profiling ingestion using Pyroscope compatibility
+        💡 Gigapipe supports Continuous Profiling ingestion using Pyroscope compatibility
         #### Supported Protocols
         🔍 **Pyroscope**: Full API support for Pyroscope SDK Clients<br/>
         🔍 **OpenTelemetry Profiling**: Standardized profiling format to track application resource use<br/>
